--- a/packages/themes/plasma-themes/src/css/plasma_giga.module.css
+++ b/packages/themes/plasma-themes/src/css/plasma_giga.module.css
@@ -193,9 +193,9 @@
   --surface-transparent-tertiary-active: #FFFFFF17;
   --surface-transparent-deep-hover: #FFFFFFC2;
   --surface-transparent-deep-active: #FFFFFF94;
-  --surface-transparent-card-hover: #FFFFFF3D;
-  --surface-transparent-card-active: #FFFFFF0F;
-  --surface-transparent-card-brightness: #FFFFFF1F;
+  --surface-transparent-card-hover: #EBFFFD1C;
+  --surface-transparent-card-active: #EBFFFD08;
+  --surface-transparent-card-brightness: #EBFFFD0D;
   --surface-clear-hover: #FFFFFFFF;
   --surface-clear-active: #FFFFFFFF;
   --surface-accent-hover: #4DF5CBFF;
@@ -236,7 +236,6 @@
   --surface-solid-tertiary: #262626;
   --surface-solid-card: #171717;
   --surface-solid-default: #FFFFFFFF;
-  --surface-transparent-card: #FFFFFF1F;
   --surface-transparent-primary: #FFFFFF0D;
   --surface-transparent-secondary: #FFFFFF1A;
   --surface-transparent-tertiary: #FFFFFF26;
@@ -254,6 +253,7 @@
   --surface-accent: #24F2BFFF;
   --surface-accent-minor: #0D5442FF;
   --surface-transparent-accent: #24F2BF47;
+  --surface-transparent-card: #EDFFFD0D;
   --on-dark-surface-solid-primary-hover: #121212FF;
   --on-dark-surface-solid-primary-active: #080808FF;
   --on-dark-surface-solid-primary-brightness: #1C1C1CFF;
@@ -274,9 +274,9 @@
   --on-dark-surface-transparent-tertiary-active: #FFFFFF17;
   --on-dark-surface-transparent-deep-hover: #FFFFFFC2;
   --on-dark-surface-transparent-deep-active: #FFFFFF94;
-  --on-dark-surface-transparent-card-hover: #FFFFFF3D;
-  --on-dark-surface-transparent-card-active: #FFFFFF0F;
-  --on-dark-surface-transparent-card-brightness: #FFFFFF1F;
+  --on-dark-surface-transparent-card-hover: #EBFFFD1C;
+  --on-dark-surface-transparent-card-active: #EBFFFD08;
+  --on-dark-surface-transparent-card-brightness: #EBFFFD0D;
   --on-dark-surface-accent-hover: #4DF5CBFF;
   --on-dark-surface-accent-active: #1CF2BCFF;
   --on-dark-surface-accent-minor-hover: #106550FF;
@@ -315,7 +315,6 @@
   --on-dark-surface-solid-secondary: #191919FF;
   --on-dark-surface-solid-tertiary: #262626;
   --on-dark-surface-solid-default: #FFFFFFFF;
-  --on-dark-surface-transparent-card: #FFFFFF1F;
   --on-dark-surface-transparent-primary: #FFFFFF0D;
   --on-dark-surface-transparent-secondary: #FFFFFF1A;
   --on-dark-surface-transparent-tertiary: #FFFFFF26;
@@ -332,6 +331,7 @@
   --on-dark-surface-accent: #24F2BFFF;
   --on-dark-surface-accent-minor: #0D5442FF;
   --on-dark-surface-transparent-accent: #24F2BF47;
+  --on-dark-surface-transparent-card: #EDFFFD0D;
   --on-light-surface-solid-primary-hover: #F7F7F7FF;
   --on-light-surface-solid-primary-active: #EDEDEDFF;
   --on-light-surface-solid-primary-brightness: #FFFFFFFF;
@@ -1136,9 +1136,9 @@
   --on-dark-surface-transparent-tertiary-active: #FFFFFF30;
   --on-dark-surface-transparent-deep-hover: #FFFFFF8F;
   --on-dark-surface-transparent-deep-active: #FFFFFFAD;
-  --on-dark-surface-transparent-card-hover: #FFFFFF0A;
-  --on-dark-surface-transparent-card-active: #FFFFFF29;
-  --on-dark-surface-transparent-card-brightness: #FFFFFF1F;
+  --on-dark-surface-transparent-card-hover: #EBFFFD03;
+  --on-dark-surface-transparent-card-active: #EBFFFD17;
+  --on-dark-surface-transparent-card-brightness: #EBFFFD0D;
   --on-dark-surface-accent-hover: #43F4C8FF;
   --on-dark-surface-accent-active: #13F1BAFF;
   --on-dark-surface-accent-minor-hover: #116E57FF;
@@ -1177,7 +1177,6 @@
   --on-dark-surface-solid-secondary: #191919FF;
   --on-dark-surface-solid-tertiary: #262626;
   --on-dark-surface-solid-default: #FFFFFFFF;
-  --on-dark-surface-transparent-card: #FFFFFF1F;
   --on-dark-surface-transparent-primary: #FFFFFF0D;
   --on-dark-surface-transparent-secondary: #FFFFFF1A;
   --on-dark-surface-transparent-tertiary: #FFFFFF26;
@@ -1194,6 +1193,7 @@
   --on-dark-surface-accent: #24F2BFFF;
   --on-dark-surface-accent-minor: #0D5442FF;
   --on-dark-surface-transparent-accent: #24F2BF47;
+  --on-dark-surface-transparent-card: #EDFFFD0D;
   --on-light-surface-solid-primary-hover: #F7F7F7FF;
   --on-light-surface-solid-primary-active: #EDEDEDFF;
   --on-light-surface-solid-primary-brightness: #FFFFFFFF;
@@ -1292,9 +1292,9 @@
   --inverse-surface-transparent-tertiary-active: #FFFFFF30;
   --inverse-surface-transparent-deep-hover: #FFFFFF8F;
   --inverse-surface-transparent-deep-active: #FFFFFFAD;
-  --inverse-surface-transparent-card-hover: #FFFFFF0A;
-  --inverse-surface-transparent-card-active: #FFFFFF29;
-  --inverse-surface-transparent-card-brightness: #FFFFFF1F;
+  --inverse-surface-transparent-card-hover: #EBFFFD03;
+  --inverse-surface-transparent-card-active: #EBFFFD17;
+  --inverse-surface-transparent-card-brightness: #EBFFFD0D;
   --inverse-surface-accent-hover: #43F4C8FF;
   --inverse-surface-accent-active: #13F1BAFF;
   --inverse-surface-accent-minor-hover: #116E57FF;
@@ -1333,7 +1333,6 @@
   --inverse-surface-solid-secondary: #191919FF;
   --inverse-surface-solid-tertiary: #262626;
   --inverse-surface-solid-default: #FFFFFFFF;
-  --inverse-surface-transparent-card: #FFFFFF1F;
   --inverse-surface-transparent-primary: #FFFFFF0F;
   --inverse-surface-transparent-secondary: #FFFFFF1A;
   --inverse-surface-transparent-tertiary: #FFFFFF26;
@@ -1350,6 +1349,7 @@
   --inverse-surface-accent: #24F2BFFF;
   --inverse-surface-accent-minor: #0D5442FF;
   --inverse-surface-transparent-accent: #24F2BF47;
+  --inverse-surface-transparent-card: #EDFFFD0D;
   --background-primary: #EFF0F2FF;
   --dark-background-primary: #242326FF;
   --light-background-primary: #EFF0F2FF;
@@ -1715,7 +1715,7 @@
   --on-light-surface-skeleton-deep-gradient-active: #FFFFFFFF;
   --inverse-surface-accent-gradient-hover: #FFFFFFFF;
   --inverse-surface-accent-gradient-active: #FFFFFFFF;
-  --inverse-surface-accent-gradient: linear-gradient(94deg,#3E79F06.49%,#27C6E593.51%);
+  --inverse-surface-accent-gradient: linear-gradient(94deg, #3E79F0FF 6.49%, #27C6E5FF 93.51%);
   --inverse-surface-skeleton-gradient: linear-gradient(90deg, #FFFFFF17 0%, #FFFFFF14 6.25%, #FFFFFF0D 12.5%, #FFFFFF03 25%, #FFFFFF0D 37.5%, #FFFFFF14 43.75%, #FFFFFF17 50%, #FFFFFF14 56.25%, #FFFFFF0D 62.5%, #FFFFFF03 75%, #FFFFFF0D 87.5%, #FFFFFF14 93.75%, #FFFFFF17 100%);
   --inverse-surface-skeleton-gradient-hover: #FFFFFFFF;
   --inverse-surface-skeleton-gradient-active: #FFFFFFFF;
@@ -1877,6 +1877,57 @@
   --plasma-typo-text-xs-bold-font-family: var(--plasma-typo-text-font-family);
   --plasma-typo-text-xs-bold-letter-spacing: -0.02em;
   --plasma-typo-text-xs-bold-font-style: normal;
+  --plasma-typo-dspl-l-medium-font-family: var(--plasma-typo-display-font-family);
+  --plasma-typo-dspl-l-medium-letter-spacing: normal;
+  --plasma-typo-dspl-l-medium-font-style: normal;
+  --plasma-typo-dspl-m-medium-font-family: var(--plasma-typo-display-font-family);
+  --plasma-typo-dspl-m-medium-letter-spacing: normal;
+  --plasma-typo-dspl-m-medium-font-style: normal;
+  --plasma-typo-dspl-s-medium-font-family: var(--plasma-typo-display-font-family);
+  --plasma-typo-dspl-s-medium-letter-spacing: normal;
+  --plasma-typo-dspl-s-medium-font-style: normal;
+  --plasma-typo-h1-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h1-medium-letter-spacing: normal;
+  --plasma-typo-h1-medium-font-style: normal;
+  --plasma-typo-h2-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h2-medium-letter-spacing: normal;
+  --plasma-typo-h2-medium-font-style: normal;
+  --plasma-typo-h3-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h3-medium-letter-spacing: normal;
+  --plasma-typo-h3-medium-font-style: normal;
+  --plasma-typo-h4-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h4-medium-letter-spacing: normal;
+  --plasma-typo-h4-medium-font-style: normal;
+  --plasma-typo-h5-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h5-medium-letter-spacing: normal;
+  --plasma-typo-h5-medium-font-style: normal;
+  --plasma-typo-body-l-medium-font-family: var(--plasma-typo-body-font-family);
+  --plasma-typo-body-l-medium-letter-spacing: -0.02em;
+  --plasma-typo-body-l-medium-font-style: normal;
+  --plasma-typo-body-m-medium-font-family: var(--plasma-typo-body-font-family);
+  --plasma-typo-body-m-medium-letter-spacing: -0.02em;
+  --plasma-typo-body-m-medium-font-style: normal;
+  --plasma-typo-body-s-medium-font-family: var(--plasma-typo-body-font-family);
+  --plasma-typo-body-s-medium-letter-spacing: -0.02em;
+  --plasma-typo-body-s-medium-font-style: normal;
+  --plasma-typo-body-xs-medium-font-family: var(--plasma-typo-body-font-family);
+  --plasma-typo-body-xs-medium-letter-spacing: -0.02em;
+  --plasma-typo-body-xs-medium-font-style: normal;
+  --plasma-typo-body-xxs-medium-font-family: var(--plasma-typo-body-font-family);
+  --plasma-typo-body-xxs-medium-letter-spacing: -0.02em;
+  --plasma-typo-body-xxs-medium-font-style: normal;
+  --plasma-typo-text-l-medium-font-family: var(--plasma-typo-text-font-family);
+  --plasma-typo-text-l-medium-letter-spacing: -0.02em;
+  --plasma-typo-text-l-medium-font-style: normal;
+  --plasma-typo-text-m-medium-font-family: var(--plasma-typo-text-font-family);
+  --plasma-typo-text-m-medium-letter-spacing: -0.02em;
+  --plasma-typo-text-m-medium-font-style: normal;
+  --plasma-typo-text-s-medium-font-family: var(--plasma-typo-text-font-family);
+  --plasma-typo-text-s-medium-letter-spacing: -0.02em;
+  --plasma-typo-text-s-medium-font-style: normal;
+  --plasma-typo-text-xs-medium-font-family: var(--plasma-typo-text-font-family);
+  --plasma-typo-text-xs-medium-letter-spacing: -0.02em;
+  --plasma-typo-text-xs-medium-font-style: normal;
 }
 
 @media (max-width: 559px) {
@@ -1983,6 +2034,57 @@
     --plasma-typo-text-xs-bold-font-size: 0.75rem;
     --plasma-typo-text-xs-bold-font-weight: 600;
     --plasma-typo-text-xs-bold-line-height: 1rem;
+    --plasma-typo-dspl-l-medium-font-size: 5.5rem;
+    --plasma-typo-dspl-l-medium-font-weight: 500;
+    --plasma-typo-dspl-l-medium-line-height: 5.75rem;
+    --plasma-typo-dspl-m-medium-font-size: 3.5rem;
+    --plasma-typo-dspl-m-medium-font-weight: 500;
+    --plasma-typo-dspl-m-medium-line-height: 3.875rem;
+    --plasma-typo-dspl-s-medium-font-size: 2.5rem;
+    --plasma-typo-dspl-s-medium-font-weight: 500;
+    --plasma-typo-dspl-s-medium-line-height: 2.875rem;
+    --plasma-typo-h1-medium-font-size: 1.75rem;
+    --plasma-typo-h1-medium-font-weight: 500;
+    --plasma-typo-h1-medium-line-height: 2.125rem;
+    --plasma-typo-h2-medium-font-size: 1.5rem;
+    --plasma-typo-h2-medium-font-weight: 500;
+    --plasma-typo-h2-medium-line-height: 1.875rem;
+    --plasma-typo-h3-medium-font-size: 1.25rem;
+    --plasma-typo-h3-medium-font-weight: 500;
+    --plasma-typo-h3-medium-line-height: 1.625rem;
+    --plasma-typo-h4-medium-font-size: 1.125rem;
+    --plasma-typo-h4-medium-font-weight: 500;
+    --plasma-typo-h4-medium-line-height: 1.5rem;
+    --plasma-typo-h5-medium-font-size: 1rem;
+    --plasma-typo-h5-medium-font-weight: 500;
+    --plasma-typo-h5-medium-line-height: 1.375rem;
+    --plasma-typo-body-l-medium-font-size: 1.125rem;
+    --plasma-typo-body-l-medium-font-weight: 500;
+    --plasma-typo-body-l-medium-line-height: 1.375rem;
+    --plasma-typo-body-m-medium-font-size: 1rem;
+    --plasma-typo-body-m-medium-font-weight: 500;
+    --plasma-typo-body-m-medium-line-height: 1.25rem;
+    --plasma-typo-body-s-medium-font-size: 0.875rem;
+    --plasma-typo-body-s-medium-font-weight: 500;
+    --plasma-typo-body-s-medium-line-height: 1.125rem;
+    --plasma-typo-body-xs-medium-font-size: 0.75rem;
+    --plasma-typo-body-xs-medium-font-weight: 500;
+    --plasma-typo-body-xs-medium-line-height: 0.875rem;
+    --plasma-typo-body-xxs-medium-font-size: 0.625rem;
+    --plasma-typo-body-xxs-medium-font-weight: 500;
+    --plasma-typo-body-xxs-medium-line-height: 0.75rem;
+    --plasma-typo-text-l-medium-font-size: 1.125rem;
+    --plasma-typo-text-l-medium-font-weight: 500;
+    --plasma-typo-text-l-medium-line-height: 1.625rem;
+    --plasma-typo-text-m-medium-font-size: 1rem;
+    --plasma-typo-text-m-medium-font-weight: 500;
+    --plasma-typo-text-m-medium-line-height: 1.375rem;
+    --plasma-typo-text-s-medium-font-size: 0.875rem;
+    --plasma-typo-text-s-medium-font-weight: 500;
+    --plasma-typo-text-s-medium-line-height: 1.25rem;
+    --plasma-typo-text-xs-medium-font-size: 0.75rem;
+    --plasma-typo-text-xs-medium-font-weight: 500;
+    --plasma-typo-text-xs-medium-line-height: 1rem;
   }
 }
 
@@ -2090,6 +2192,57 @@
     --plasma-typo-text-xs-bold-font-size: 0.75rem;
     --plasma-typo-text-xs-bold-font-weight: 600;
     --plasma-typo-text-xs-bold-line-height: 1rem;
+    --plasma-typo-dspl-l-medium-font-size: 7rem;
+    --plasma-typo-dspl-l-medium-font-weight: 500;
+    --plasma-typo-dspl-l-medium-line-height: 7rem;
+    --plasma-typo-dspl-m-medium-font-size: 4.5rem;
+    --plasma-typo-dspl-m-medium-font-weight: 500;
+    --plasma-typo-dspl-m-medium-line-height: 4.75rem;
+    --plasma-typo-dspl-s-medium-font-size: 3rem;
+    --plasma-typo-dspl-s-medium-font-weight: 500;
+    --plasma-typo-dspl-s-medium-line-height: 3.375rem;
+    --plasma-typo-h1-medium-font-size: 2.5rem;
+    --plasma-typo-h1-medium-font-weight: 500;
+    --plasma-typo-h1-medium-line-height: 2.875rem;
+    --plasma-typo-h2-medium-font-size: 1.75rem;
+    --plasma-typo-h2-medium-font-weight: 500;
+    --plasma-typo-h2-medium-line-height: 2.125rem;
+    --plasma-typo-h3-medium-font-size: 1.25rem;
+    --plasma-typo-h3-medium-font-weight: 500;
+    --plasma-typo-h3-medium-line-height: 1.625rem;
+    --plasma-typo-h4-medium-font-size: 1.125rem;
+    --plasma-typo-h4-medium-font-weight: 500;
+    --plasma-typo-h4-medium-line-height: 1.5rem;
+    --plasma-typo-h5-medium-font-size: 1rem;
+    --plasma-typo-h5-medium-font-weight: 500;
+    --plasma-typo-h5-medium-line-height: 1.375rem;
+    --plasma-typo-body-l-medium-font-size: 1.125rem;
+    --plasma-typo-body-l-medium-font-weight: 500;
+    --plasma-typo-body-l-medium-line-height: 1.375rem;
+    --plasma-typo-body-m-medium-font-size: 1rem;
+    --plasma-typo-body-m-medium-font-weight: 500;
+    --plasma-typo-body-m-medium-line-height: 1.25rem;
+    --plasma-typo-body-s-medium-font-size: 0.875rem;
+    --plasma-typo-body-s-medium-font-weight: 500;
+    --plasma-typo-body-s-medium-line-height: 1.125rem;
+    --plasma-typo-body-xs-medium-font-size: 0.75rem;
+    --plasma-typo-body-xs-medium-font-weight: 500;
+    --plasma-typo-body-xs-medium-line-height: 0.875rem;
+    --plasma-typo-body-xxs-medium-font-size: 0.625rem;
+    --plasma-typo-body-xxs-medium-font-weight: 500;
+    --plasma-typo-body-xxs-medium-line-height: 0.75rem;
+    --plasma-typo-text-l-medium-font-size: 1.25rem;
+    --plasma-typo-text-l-medium-font-weight: 500;
+    --plasma-typo-text-l-medium-line-height: 1.75rem;
+    --plasma-typo-text-m-medium-font-size: 1rem;
+    --plasma-typo-text-m-medium-font-weight: 500;
+    --plasma-typo-text-m-medium-line-height: 1.375rem;
+    --plasma-typo-text-s-medium-font-size: 0.875rem;
+    --plasma-typo-text-s-medium-font-weight: 500;
+    --plasma-typo-text-s-medium-line-height: 1.25rem;
+    --plasma-typo-text-xs-medium-font-size: 0.75rem;
+    --plasma-typo-text-xs-medium-font-weight: 500;
+    --plasma-typo-text-xs-medium-line-height: 1rem;
   }
 }
 
@@ -2197,5 +2350,56 @@
     --plasma-typo-text-xs-bold-font-size: 0.75rem;
     --plasma-typo-text-xs-bold-font-weight: 600;
     --plasma-typo-text-xs-bold-line-height: 1rem;
+    --plasma-typo-dspl-l-medium-font-size: 8rem;
+    --plasma-typo-dspl-l-medium-font-weight: 500;
+    --plasma-typo-dspl-l-medium-line-height: 8rem;
+    --plasma-typo-dspl-m-medium-font-size: 5.5rem;
+    --plasma-typo-dspl-m-medium-font-weight: 500;
+    --plasma-typo-dspl-m-medium-line-height: 5.75rem;
+    --plasma-typo-dspl-s-medium-font-size: 4rem;
+    --plasma-typo-dspl-s-medium-font-weight: 500;
+    --plasma-typo-dspl-s-medium-line-height: 4.25rem;
+    --plasma-typo-h1-medium-font-size: 3rem;
+    --plasma-typo-h1-medium-font-weight: 500;
+    --plasma-typo-h1-medium-line-height: 3.375rem;
+    --plasma-typo-h2-medium-font-size: 2rem;
+    --plasma-typo-h2-medium-font-weight: 500;
+    --plasma-typo-h2-medium-line-height: 2.375rem;
+    --plasma-typo-h3-medium-font-size: 1.5rem;
+    --plasma-typo-h3-medium-font-weight: 500;
+    --plasma-typo-h3-medium-line-height: 1.875rem;
+    --plasma-typo-h4-medium-font-size: 1.25rem;
+    --plasma-typo-h4-medium-font-weight: 500;
+    --plasma-typo-h4-medium-line-height: 1.625rem;
+    --plasma-typo-h5-medium-font-size: 1.125rem;
+    --plasma-typo-h5-medium-font-weight: 500;
+    --plasma-typo-h5-medium-line-height: 1.5rem;
+    --plasma-typo-body-l-medium-font-size: 1.125rem;
+    --plasma-typo-body-l-medium-font-weight: 500;
+    --plasma-typo-body-l-medium-line-height: 1.375rem;
+    --plasma-typo-body-m-medium-font-size: 1rem;
+    --plasma-typo-body-m-medium-font-weight: 500;
+    --plasma-typo-body-m-medium-line-height: 1.25rem;
+    --plasma-typo-body-s-medium-font-size: 0.875rem;
+    --plasma-typo-body-s-medium-font-weight: 500;
+    --plasma-typo-body-s-medium-line-height: 1.125rem;
+    --plasma-typo-body-xs-medium-font-size: 0.75rem;
+    --plasma-typo-body-xs-medium-font-weight: 500;
+    --plasma-typo-body-xs-medium-line-height: 0.875rem;
+    --plasma-typo-body-xxs-medium-font-size: 0.625rem;
+    --plasma-typo-body-xxs-medium-font-weight: 500;
+    --plasma-typo-body-xxs-medium-line-height: 0.75rem;
+    --plasma-typo-text-l-medium-font-size: 1.25rem;
+    --plasma-typo-text-l-medium-font-weight: 500;
+    --plasma-typo-text-l-medium-line-height: 1.75rem;
+    --plasma-typo-text-m-medium-font-size: 1rem;
+    --plasma-typo-text-m-medium-font-weight: 500;
+    --plasma-typo-text-m-medium-line-height: 1.375rem;
+    --plasma-typo-text-s-medium-font-size: 0.875rem;
+    --plasma-typo-text-s-medium-font-weight: 500;
+    --plasma-typo-text-s-medium-line-height: 1.25rem;
+    --plasma-typo-text-xs-medium-font-size: 0.75rem;
+    --plasma-typo-text-xs-medium-font-weight: 500;
+    --plasma-typo-text-xs-medium-line-height: 1rem;
   }
 }
