--- a/packages/themes/sdds-themes/src/css/sdds_cs.module.css
+++ b/packages/themes/sdds-themes/src/css/sdds_cs.module.css
@@ -1077,6 +1077,57 @@ export const inverseTextPromoMinorGradient = 'var(--inverse-text-promo-minor-gra
   --plasma-typo-text-xs-bold-font-family: var(--plasma-typo-text-font-family);
   --plasma-typo-text-xs-bold-letter-spacing: -0.02em;
   --plasma-typo-text-xs-bold-font-style: normal;
+  --plasma-typo-dspl-l-medium-font-family: var(--plasma-typo-display-font-family);
+  --plasma-typo-dspl-l-medium-letter-spacing: normal;
+  --plasma-typo-dspl-l-medium-font-style: normal;
+  --plasma-typo-dspl-m-medium-font-family: var(--plasma-typo-display-font-family);
+  --plasma-typo-dspl-m-medium-letter-spacing: normal;
+  --plasma-typo-dspl-m-medium-font-style: normal;
+  --plasma-typo-dspl-s-medium-font-family: var(--plasma-typo-display-font-family);
+  --plasma-typo-dspl-s-medium-letter-spacing: normal;
+  --plasma-typo-dspl-s-medium-font-style: normal;
+  --plasma-typo-h1-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h1-medium-letter-spacing: normal;
+  --plasma-typo-h1-medium-font-style: normal;
+  --plasma-typo-h2-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h2-medium-letter-spacing: normal;
+  --plasma-typo-h2-medium-font-style: normal;
+  --plasma-typo-h3-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h3-medium-letter-spacing: normal;
+  --plasma-typo-h3-medium-font-style: normal;
+  --plasma-typo-h4-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h4-medium-letter-spacing: normal;
+  --plasma-typo-h4-medium-font-style: normal;
+  --plasma-typo-h5-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h5-medium-letter-spacing: normal;
+  --plasma-typo-h5-medium-font-style: normal;
+  --plasma-typo-body-l-medium-font-family: var(--plasma-typo-body-font-family);
+  --plasma-typo-body-l-medium-letter-spacing: -0.02em;
+  --plasma-typo-body-l-medium-font-style: normal;
+  --plasma-typo-body-m-medium-font-family: var(--plasma-typo-body-font-family);
+  --plasma-typo-body-m-medium-letter-spacing: -0.02em;
+  --plasma-typo-body-m-medium-font-style: normal;
+  --plasma-typo-body-s-medium-font-family: var(--plasma-typo-body-font-family);
+  --plasma-typo-body-s-medium-letter-spacing: -0.02em;
+  --plasma-typo-body-s-medium-font-style: normal;
+  --plasma-typo-body-xs-medium-font-family: var(--plasma-typo-body-font-family);
+  --plasma-typo-body-xs-medium-letter-spacing: -0.02em;
+  --plasma-typo-body-xs-medium-font-style: normal;
+  --plasma-typo-body-xxs-medium-font-family: var(--plasma-typo-body-font-family);
+  --plasma-typo-body-xxs-medium-letter-spacing: -0.02em;
+  --plasma-typo-body-xxs-medium-font-style: normal;
+  --plasma-typo-text-l-medium-font-family: var(--plasma-typo-text-font-family);
+  --plasma-typo-text-l-medium-letter-spacing: -0.02em;
+  --plasma-typo-text-l-medium-font-style: normal;
+  --plasma-typo-text-m-medium-font-family: var(--plasma-typo-text-font-family);
+  --plasma-typo-text-m-medium-letter-spacing: -0.02em;
+  --plasma-typo-text-m-medium-font-style: normal;
+  --plasma-typo-text-s-medium-font-family: var(--plasma-typo-text-font-family);
+  --plasma-typo-text-s-medium-letter-spacing: -0.02em;
+  --plasma-typo-text-s-medium-font-style: normal;
+  --plasma-typo-text-xs-medium-font-family: var(--plasma-typo-text-font-family);
+  --plasma-typo-text-xs-medium-letter-spacing: -0.02em;
+  --plasma-typo-text-xs-medium-font-style: normal;
 }
 
 @media (max-width: 559px) {
@@ -1183,6 +1234,57 @@ export const inverseTextPromoMinorGradient = 'var(--inverse-text-promo-minor-gra
     --plasma-typo-text-xs-bold-font-size: 0.75rem;
     --plasma-typo-text-xs-bold-font-weight: 600;
     --plasma-typo-text-xs-bold-line-height: 1.125rem;
+    --plasma-typo-dspl-l-medium-font-size: 8rem;
+    --plasma-typo-dspl-l-medium-font-weight: 500;
+    --plasma-typo-dspl-l-medium-line-height: 8rem;
+    --plasma-typo-dspl-m-medium-font-size: 5.5rem;
+    --plasma-typo-dspl-m-medium-font-weight: 500;
+    --plasma-typo-dspl-m-medium-line-height: 6rem;
+    --plasma-typo-dspl-s-medium-font-size: 4rem;
+    --plasma-typo-dspl-s-medium-font-weight: 500;
+    --plasma-typo-dspl-s-medium-line-height: 4.5rem;
+    --plasma-typo-h1-medium-font-size: 2.5rem;
+    --plasma-typo-h1-medium-font-weight: 500;
+    --plasma-typo-h1-medium-line-height: 3rem;
+    --plasma-typo-h2-medium-font-size: 2rem;
+    --plasma-typo-h2-medium-font-weight: 500;
+    --plasma-typo-h2-medium-line-height: 2.625rem;
+    --plasma-typo-h3-medium-font-size: 1.5rem;
+    --plasma-typo-h3-medium-font-weight: 500;
+    --plasma-typo-h3-medium-line-height: 2.125rem;
+    --plasma-typo-h4-medium-font-size: 1.25rem;
+    --plasma-typo-h4-medium-font-weight: 500;
+    --plasma-typo-h4-medium-line-height: 1.875rem;
+    --plasma-typo-h5-medium-font-size: 1.125rem;
+    --plasma-typo-h5-medium-font-weight: 500;
+    --plasma-typo-h5-medium-line-height: 1.75rem;
+    --plasma-typo-body-l-medium-font-size: 1.125rem;
+    --plasma-typo-body-l-medium-font-weight: 500;
+    --plasma-typo-body-l-medium-line-height: 1.625rem;
+    --plasma-typo-body-m-medium-font-size: 1rem;
+    --plasma-typo-body-m-medium-font-weight: 500;
+    --plasma-typo-body-m-medium-line-height: 1.5rem;
+    --plasma-typo-body-s-medium-font-size: 0.875rem;
+    --plasma-typo-body-s-medium-font-weight: 500;
+    --plasma-typo-body-s-medium-line-height: 1.25rem;
+    --plasma-typo-body-xs-medium-font-size: 0.75rem;
+    --plasma-typo-body-xs-medium-font-weight: 500;
+    --plasma-typo-body-xs-medium-line-height: 1rem;
+    --plasma-typo-body-xxs-medium-font-size: 0.625rem;
+    --plasma-typo-body-xxs-medium-font-weight: 500;
+    --plasma-typo-body-xxs-medium-line-height: 0.875rem;
+    --plasma-typo-text-l-medium-font-size: 1.5rem;
+    --plasma-typo-text-l-medium-font-weight: 500;
+    --plasma-typo-text-l-medium-line-height: 2.25rem;
+    --plasma-typo-text-m-medium-font-size: 1.125rem;
+    --plasma-typo-text-m-medium-font-weight: 500;
+    --plasma-typo-text-m-medium-line-height: 1.75rem;
+    --plasma-typo-text-s-medium-font-size: 0.875rem;
+    --plasma-typo-text-s-medium-font-weight: 500;
+    --plasma-typo-text-s-medium-line-height: 1.25rem;
+    --plasma-typo-text-xs-medium-font-size: 0.75rem;
+    --plasma-typo-text-xs-medium-font-weight: 500;
+    --plasma-typo-text-xs-medium-line-height: 1.125rem;
   }
 }
 
@@ -1290,6 +1392,57 @@ export const inverseTextPromoMinorGradient = 'var(--inverse-text-promo-minor-gra
     --plasma-typo-text-xs-bold-font-size: 0.75rem;
     --plasma-typo-text-xs-bold-font-weight: 600;
     --plasma-typo-text-xs-bold-line-height: 1.125rem;
+    --plasma-typo-dspl-l-medium-font-size: 8rem;
+    --plasma-typo-dspl-l-medium-font-weight: 500;
+    --plasma-typo-dspl-l-medium-line-height: 8rem;
+    --plasma-typo-dspl-m-medium-font-size: 5.5rem;
+    --plasma-typo-dspl-m-medium-font-weight: 500;
+    --plasma-typo-dspl-m-medium-line-height: 6rem;
+    --plasma-typo-dspl-s-medium-font-size: 4rem;
+    --plasma-typo-dspl-s-medium-font-weight: 500;
+    --plasma-typo-dspl-s-medium-line-height: 4.5rem;
+    --plasma-typo-h1-medium-font-size: 2.5rem;
+    --plasma-typo-h1-medium-font-weight: 500;
+    --plasma-typo-h1-medium-line-height: 3rem;
+    --plasma-typo-h2-medium-font-size: 2rem;
+    --plasma-typo-h2-medium-font-weight: 500;
+    --plasma-typo-h2-medium-line-height: 2.625rem;
+    --plasma-typo-h3-medium-font-size: 1.5rem;
+    --plasma-typo-h3-medium-font-weight: 500;
+    --plasma-typo-h3-medium-line-height: 2.125rem;
+    --plasma-typo-h4-medium-font-size: 1.25rem;
+    --plasma-typo-h4-medium-font-weight: 500;
+    --plasma-typo-h4-medium-line-height: 1.875rem;
+    --plasma-typo-h5-medium-font-size: 1.125rem;
+    --plasma-typo-h5-medium-font-weight: 500;
+    --plasma-typo-h5-medium-line-height: 1.75rem;
+    --plasma-typo-body-l-medium-font-size: 1.125rem;
+    --plasma-typo-body-l-medium-font-weight: 500;
+    --plasma-typo-body-l-medium-line-height: 1.625rem;
+    --plasma-typo-body-m-medium-font-size: 1rem;
+    --plasma-typo-body-m-medium-font-weight: 500;
+    --plasma-typo-body-m-medium-line-height: 1.5rem;
+    --plasma-typo-body-s-medium-font-size: 0.875rem;
+    --plasma-typo-body-s-medium-font-weight: 500;
+    --plasma-typo-body-s-medium-line-height: 1.25rem;
+    --plasma-typo-body-xs-medium-font-size: 0.75rem;
+    --plasma-typo-body-xs-medium-font-weight: 500;
+    --plasma-typo-body-xs-medium-line-height: 1rem;
+    --plasma-typo-body-xxs-medium-font-size: 0.625rem;
+    --plasma-typo-body-xxs-medium-font-weight: 500;
+    --plasma-typo-body-xxs-medium-line-height: 0.875rem;
+    --plasma-typo-text-l-medium-font-size: 1.5rem;
+    --plasma-typo-text-l-medium-font-weight: 500;
+    --plasma-typo-text-l-medium-line-height: 2.25rem;
+    --plasma-typo-text-m-medium-font-size: 1.125rem;
+    --plasma-typo-text-m-medium-font-weight: 500;
+    --plasma-typo-text-m-medium-line-height: 1.75rem;
+    --plasma-typo-text-s-medium-font-size: 0.875rem;
+    --plasma-typo-text-s-medium-font-weight: 500;
+    --plasma-typo-text-s-medium-line-height: 1.25rem;
+    --plasma-typo-text-xs-medium-font-size: 0.75rem;
+    --plasma-typo-text-xs-medium-font-weight: 500;
+    --plasma-typo-text-xs-medium-line-height: 1.125rem;
   }
 }
 
@@ -1397,5 +1550,56 @@ export const inverseTextPromoMinorGradient = 'var(--inverse-text-promo-minor-gra
     --plasma-typo-text-xs-bold-font-size: 0.75rem;
     --plasma-typo-text-xs-bold-font-weight: 600;
     --plasma-typo-text-xs-bold-line-height: 1.125rem;
+    --plasma-typo-dspl-l-medium-font-size: 8rem;
+    --plasma-typo-dspl-l-medium-font-weight: 500;
+    --plasma-typo-dspl-l-medium-line-height: 8rem;
+    --plasma-typo-dspl-m-medium-font-size: 5.5rem;
+    --plasma-typo-dspl-m-medium-font-weight: 500;
+    --plasma-typo-dspl-m-medium-line-height: 6rem;
+    --plasma-typo-dspl-s-medium-font-size: 4rem;
+    --plasma-typo-dspl-s-medium-font-weight: 500;
+    --plasma-typo-dspl-s-medium-line-height: 4.5rem;
+    --plasma-typo-h1-medium-font-size: 2.5rem;
+    --plasma-typo-h1-medium-font-weight: 500;
+    --plasma-typo-h1-medium-line-height: 3rem;
+    --plasma-typo-h2-medium-font-size: 2rem;
+    --plasma-typo-h2-medium-font-weight: 500;
+    --plasma-typo-h2-medium-line-height: 2.625rem;
+    --plasma-typo-h3-medium-font-size: 1.5rem;
+    --plasma-typo-h3-medium-font-weight: 500;
+    --plasma-typo-h3-medium-line-height: 2.125rem;
+    --plasma-typo-h4-medium-font-size: 1.25rem;
+    --plasma-typo-h4-medium-font-weight: 500;
+    --plasma-typo-h4-medium-line-height: 1.875rem;
+    --plasma-typo-h5-medium-font-size: 1.125rem;
+    --plasma-typo-h5-medium-font-weight: 500;
+    --plasma-typo-h5-medium-line-height: 1.75rem;
+    --plasma-typo-body-l-medium-font-size: 1.125rem;
+    --plasma-typo-body-l-medium-font-weight: 500;
+    --plasma-typo-body-l-medium-line-height: 1.625rem;
+    --plasma-typo-body-m-medium-font-size: 1rem;
+    --plasma-typo-body-m-medium-font-weight: 500;
+    --plasma-typo-body-m-medium-line-height: 1.5rem;
+    --plasma-typo-body-s-medium-font-size: 0.875rem;
+    --plasma-typo-body-s-medium-font-weight: 500;
+    --plasma-typo-body-s-medium-line-height: 1.25rem;
+    --plasma-typo-body-xs-medium-font-size: 0.75rem;
+    --plasma-typo-body-xs-medium-font-weight: 500;
+    --plasma-typo-body-xs-medium-line-height: 1rem;
+    --plasma-typo-body-xxs-medium-font-size: 0.625rem;
+    --plasma-typo-body-xxs-medium-font-weight: 500;
+    --plasma-typo-body-xxs-medium-line-height: 0.875rem;
+    --plasma-typo-text-l-medium-font-size: 1.5rem;
+    --plasma-typo-text-l-medium-font-weight: 500;
+    --plasma-typo-text-l-medium-line-height: 2.25rem;
+    --plasma-typo-text-m-medium-font-size: 1.125rem;
+    --plasma-typo-text-m-medium-font-weight: 500;
+    --plasma-typo-text-m-medium-line-height: 1.75rem;
+    --plasma-typo-text-s-medium-font-size: 0.875rem;
+    --plasma-typo-text-s-medium-font-weight: 500;
+    --plasma-typo-text-s-medium-line-height: 1.25rem;
+    --plasma-typo-text-xs-medium-font-size: 0.75rem;
+    --plasma-typo-text-xs-medium-font-weight: 500;
+    --plasma-typo-text-xs-medium-line-height: 1.125rem;
   }
 }
