--- a/packages/themes/plasma-themes/src/css/plasma_giga.module.css
+++ b/packages/themes/plasma-themes/src/css/plasma_giga.module.css
@@ -198,12 +198,12 @@
   --surface-transparent-card-brightness: #EBFFFD0D;
   --surface-clear-hover: #FFFFFFFF;
   --surface-clear-active: #FFFFFFFF;
-  --surface-accent-hover: #4DF5CBFF;
-  --surface-accent-active: #1CF2BCFF;
-  --surface-accent-minor-hover: #106550FF;
-  --surface-accent-minor-active: #0C4B3BFF;
-  --surface-transparent-accent-hover: #26F2BF66;
-  --surface-transparent-accent-active: #26F2BF38;
+  --surface-accent-hover: #7AF5D2FF;
+  --surface-accent-active: #4BF1C2FF;
+  --surface-accent-minor-hover: #116A51FF;
+  --surface-accent-minor-active: #0C4F3CFF;
+  --surface-transparent-accent-hover: #54F2C552;
+  --surface-transparent-accent-active: #54F2C524;
   --surface-positive-hover: #1DAF37FF;
   --surface-positive-active: #18952FFF;
   --surface-warning-hover: #FB7223FF;
@@ -250,9 +250,9 @@
   --surface-negative-minor: #4A0D13;
   --surface-info-minor: #082254;
   --surface-transparent-info: #3F81FD33;
-  --surface-accent: #24F2BFFF;
-  --surface-accent-minor: #0D5442FF;
-  --surface-transparent-accent: #24F2BF47;
+  --surface-accent: #52F2C5;
+  --surface-accent-minor: #0E5944;
+  --surface-transparent-accent: #52F2C533;
   --surface-transparent-card: #EDFFFD0D;
   --on-dark-surface-solid-primary-hover: #121212FF;
   --on-dark-surface-solid-primary-active: #080808FF;
@@ -277,12 +277,12 @@
   --on-dark-surface-transparent-card-hover: #EBFFFD1C;
   --on-dark-surface-transparent-card-active: #EBFFFD08;
   --on-dark-surface-transparent-card-brightness: #EBFFFD0D;
-  --on-dark-surface-accent-hover: #4DF5CBFF;
-  --on-dark-surface-accent-active: #1CF2BCFF;
-  --on-dark-surface-accent-minor-hover: #106550FF;
-  --on-dark-surface-accent-minor-active: #0C4B3BFF;
-  --on-dark-surface-transparent-accent-hover: #26F2BF66;
-  --on-dark-surface-transparent-accent-active: #26F2BF38;
+  --on-dark-surface-accent-hover: #7AF5D2FF;
+  --on-dark-surface-accent-active: #4BF1C2FF;
+  --on-dark-surface-accent-minor-hover: #116A51FF;
+  --on-dark-surface-accent-minor-active: #0C4F3CFF;
+  --on-dark-surface-transparent-accent-hover: #52F1FF52;
+  --on-dark-surface-transparent-accent-active: #52F1FF24;
   --on-dark-surface-positive-hover: #1DAF37FF;
   --on-dark-surface-positive-active: #18952FFF;
   --on-dark-surface-warning-hover: #FB7223FF;
@@ -328,9 +328,9 @@
   --on-dark-surface-negative-minor: #4A0D13;
   --on-dark-surface-info-minor: #082254;
   --on-dark-surface-transparent-info: #3F81FD33;
-  --on-dark-surface-accent: #24F2BFFF;
-  --on-dark-surface-accent-minor: #0D5442FF;
-  --on-dark-surface-transparent-accent: #24F2BF47;
+  --on-dark-surface-accent: #52F2C5;
+  --on-dark-surface-accent-minor: #0E5944;
+  --on-dark-surface-transparent-accent: #52F2FF33;
   --on-dark-surface-transparent-card: #EDFFFD0D;
   --on-light-surface-solid-primary-hover: #F7F7F7FF;
   --on-light-surface-solid-primary-active: #EDEDEDFF;
@@ -355,12 +355,12 @@
   --on-light-surface-transparent-card-hover: #FFFFFFFF;
   --on-light-surface-transparent-card-active: #FFFFFFFF;
   --on-light-surface-transparent-card-brightness: #FFFFFFFF;
-  --on-light-surface-accent-hover: #21DEAFFF;
-  --on-light-surface-accent-active: #1DC39AFF;
-  --on-light-surface-accent-minor-hover: #EBFFFAFF;
-  --on-light-surface-accent-minor-active: #D6FFF5FF;
-  --on-light-surface-transparent-accent-hover: #1ECCA166;
-  --on-light-surface-transparent-accent-active: #1ECCA138;
+  --on-light-surface-accent-hover: #00C28BFF;
+  --on-light-surface-accent-active: #00A375FF;
+  --on-light-surface-accent-minor-hover: #E5FFF8FF;
+  --on-light-surface-accent-minor-active: #D1FFF2FF;
+  --on-light-surface-transparent-accent-hover: #00AD7C3D;
+  --on-light-surface-transparent-accent-active: #00AD7C0F;
   --on-light-surface-positive-hover: #1DAF37FF;
   --on-light-surface-positive-active: #18952FFF;
   --on-light-surface-warning-hover: #FB7223FF;
@@ -407,9 +407,9 @@
   --on-light-surface-info-minor: #DEE9FF;
   --on-light-surface-transparent-info: #2A72F81F;
   --on-light-surface-solid-default: #332640FF;
-  --on-light-surface-accent: #1FCCA0FF;
-  --on-light-surface-accent-minor: #DEFFF7FF;
-  --on-light-surface-transparent-accent: #1FCCA047;
+  --on-light-surface-accent: #00AC7B;
+  --on-light-surface-accent-minor: #DBFFF5;
+  --on-light-surface-transparent-accent: #00AC7B1F;
   --inverse-surface-solid-primary-hover: #F7F7F7FF;
   --inverse-surface-solid-primary-active: #EDEDEDFF;
   --inverse-surface-solid-primary-brightness: #FFFFFFFF;
@@ -433,12 +433,12 @@
   --inverse-surface-transparent-card-hover: #FFFFFFFF;
   --inverse-surface-transparent-card-active: #FFFFFFFF;
   --inverse-surface-transparent-card-brightness: #FFFFFFFF;
-  --inverse-surface-accent-hover: #4DF5CBFF;
-  --inverse-surface-accent-active: #1CF2BCFF;
-  --inverse-surface-accent-minor-hover: #EBFFFAFF;
-  --inverse-surface-accent-minor-active: #D6FFF5FF;
-  --inverse-surface-transparent-accent-hover: #1ECCA166;
-  --inverse-surface-transparent-accent-active: #1ECCA138;
+  --inverse-surface-accent-hover: #00C28BFF;
+  --inverse-surface-accent-active: #00A375FF;
+  --inverse-surface-accent-minor-hover: #E5FFF8FF;
+  --inverse-surface-accent-minor-active: #D1FFF2FF;
+  --inverse-surface-transparent-accent-hover: #00AD7C3D;
+  --inverse-surface-transparent-accent-active: #00AD7C0F;
   --inverse-surface-positive-hover: #1DAF37FF;
   --inverse-surface-positive-active: #18952FFF;
   --inverse-surface-warning-hover: #FB7223FF;
@@ -485,9 +485,9 @@
   --inverse-surface-info-minor: #DEE9FF;
   --inverse-surface-transparent-info: #2A72F81F;
   --inverse-surface-solid-default: #332640FF;
-  --inverse-surface-accent: #24F2BFFF;
-  --inverse-surface-accent-minor: #DEFFF7FF;
-  --inverse-surface-transparent-accent: #1FCCA047;
+  --inverse-surface-accent: #00AC7B;
+  --inverse-surface-accent-minor: #DBFFF5;
+  --inverse-surface-transparent-accent: #00AC7B1F;
   --background-primary: #242326FF;
   --dark-background-primary: #242326FF;
   --light-background-primary: #EFF0F2FF;
@@ -1060,12 +1060,12 @@
   --surface-transparent-card-brightness: #FFFFFFFF;
   --surface-clear-hover: #FFFFFFFF;
   --surface-clear-active: #FFFFFFFF;
-  --surface-accent-hover: #2ADFB2FF;
-  --surface-accent-active: #1CBA93FF;
-  --surface-accent-minor-hover: #F5FFFCFF;
-  --surface-accent-minor-active: #D6FFF5FF;
-  --surface-transparent-accent-hover: #1ECCA133;
-  --surface-transparent-accent-active: #1ECCA152;
+  --surface-accent-hover: #00C28BFF;
+  --surface-accent-active: #00996EFF;
+  --surface-accent-minor-hover: #F0FFFBFF;
+  --surface-accent-minor-active: #D1FFF2FF;
+  --surface-transparent-accent-hover: #00AD7C0A;
+  --surface-transparent-accent-active: #00AD7C29;
   --surface-positive-hover: #1EB83AFF;
   --surface-positive-active: #178C2CFF;
   --surface-warning-hover: #FB782DFF;
@@ -1113,9 +1113,9 @@
   --surface-info-minor: #DEE9FF;
   --surface-transparent-info: #2A72F81F;
   --surface-solid-default: #332640FF;
-  --surface-accent: #1FCCA0FF;
-  --surface-accent-minor: #DEFFF7FF;
-  --surface-transparent-accent: #1FCCA047;
+  --surface-accent: #00AC7B;
+  --surface-accent-minor: #DBFFF5;
+  --surface-transparent-accent: #00AC7B1F;
   --on-dark-surface-solid-primary-hover: #2B2B2BFF;
   --on-dark-surface-solid-primary-active: #030303FF;
   --on-dark-surface-solid-primary-brightness: #1C1C1CFF;
@@ -1139,12 +1139,12 @@
   --on-dark-surface-transparent-card-hover: #EBFFFD03;
   --on-dark-surface-transparent-card-active: #EBFFFD17;
   --on-dark-surface-transparent-card-brightness: #EBFFFD0D;
-  --on-dark-surface-accent-hover: #43F4C8FF;
-  --on-dark-surface-accent-active: #13F1BAFF;
-  --on-dark-surface-accent-minor-hover: #116E57FF;
-  --on-dark-surface-accent-minor-active: #0A4234FF;
-  --on-dark-surface-transparent-accent-hover: #26F2BF33;
-  --on-dark-surface-transparent-accent-active: #26F2BF52;
+  --on-dark-surface-accent-hover: #71F4CFFF;
+  --on-dark-surface-accent-active: #41F1BFFF;
+  --on-dark-surface-accent-minor-hover: #127357FF;
+  --on-dark-surface-accent-minor-active: #0B4736FF;
+  --on-dark-surface-transparent-accent-hover: #52F1FF1F;
+  --on-dark-surface-transparent-accent-active: #52F1FF3D;
   --on-dark-surface-positive-hover: #1EB83AFF;
   --on-dark-surface-positive-active: #178C2CFF;
   --on-dark-surface-warning-hover: #FB782DFF;
@@ -1190,9 +1190,9 @@
   --on-dark-surface-negative-minor: #4A0D13;
   --on-dark-surface-info-minor: #082254;
   --on-dark-surface-transparent-info: #3F81FD33;
-  --on-dark-surface-accent: #24F2BFFF;
-  --on-dark-surface-accent-minor: #0D5442FF;
-  --on-dark-surface-transparent-accent: #24F2BF47;
+  --on-dark-surface-transparent-accent: #52F2FF33;
+  --on-dark-surface-accent: #52F2C5;
+  --on-dark-surface-accent-minor: #0E5944;
   --on-dark-surface-transparent-card: #EDFFFD0D;
   --on-light-surface-solid-primary-hover: #F7F7F7FF;
   --on-light-surface-solid-primary-active: #EDEDEDFF;
@@ -1217,12 +1217,12 @@
   --on-light-surface-transparent-card-hover: #FFFFFFFF;
   --on-light-surface-transparent-card-active: #FFFFFFFF;
   --on-light-surface-transparent-card-brightness: #FFFFFFFF;
-  --on-light-surface-accent-hover: #2ADFB2FF;
-  --on-light-surface-accent-active: #1CBA93FF;
-  --on-light-surface-accent-minor-hover: #F5FFFCFF;
-  --on-light-surface-accent-minor-active: #D6FFF5FF;
-  --on-light-surface-transparent-accent-hover: #1ECCA133;
-  --on-light-surface-transparent-accent-active: #1ECCA152;
+  --on-light-surface-accent-hover: #00C28BFF;
+  --on-light-surface-accent-active: #00996EFF;
+  --on-light-surface-accent-minor-hover: #F0FFFBFF;
+  --on-light-surface-accent-minor-active: #D1FFF2FF;
+  --on-light-surface-transparent-accent-hover: #00AD7C0A;
+  --on-light-surface-transparent-accent-active: #00AD7C29;
   --on-light-surface-positive-hover: #1EB83AFF;
   --on-light-surface-positive-active: #178C2CFF;
   --on-light-surface-warning-hover: #FB782DFF;
@@ -1269,9 +1269,9 @@
   --on-light-surface-info-minor: #DEE9FF;
   --on-light-surface-transparent-info: #2A72F81F;
   --on-light-surface-solid-default: #332640FF;
-  --on-light-surface-accent: #1FCCA0FF;
-  --on-light-surface-accent-minor: #DEFFF7FF;
-  --on-light-surface-transparent-accent: #1FCCA047;
+  --on-light-surface-transparent-accent: #00AC7B1F;
+  --on-light-surface-accent: #00AC7B;
+  --on-light-surface-accent-minor: #DBFFF5;
   --inverse-surface-solid-primary-hover: #2B2B2BFF;
   --inverse-surface-solid-primary-active: #030303FF;
   --inverse-surface-solid-primary-brightness: #1C1C1CFF;
@@ -1295,12 +1295,12 @@
   --inverse-surface-transparent-card-hover: #EBFFFD03;
   --inverse-surface-transparent-card-active: #EBFFFD17;
   --inverse-surface-transparent-card-brightness: #EBFFFD0D;
-  --inverse-surface-accent-hover: #43F4C8FF;
-  --inverse-surface-accent-active: #13F1BAFF;
-  --inverse-surface-accent-minor-hover: #116E57FF;
-  --inverse-surface-accent-minor-active: #0A4234FF;
-  --inverse-surface-transparent-accent-hover: #26F2BF33;
-  --inverse-surface-transparent-accent-active: #26F2BF52;
+  --inverse-surface-accent-hover: #71F4CFFF;
+  --inverse-surface-accent-active: #41F1BFFF;
+  --inverse-surface-accent-minor-hover: #127357FF;
+  --inverse-surface-accent-minor-active: #0B4736FF;
+  --inverse-surface-transparent-accent-hover: #54F2C51F;
+  --inverse-surface-transparent-accent-active: #54F2C53D;
   --inverse-surface-positive-hover: #1EB83AFF;
   --inverse-surface-positive-active: #178C2CFF;
   --inverse-surface-warning-hover: #FB782DFF;
@@ -1346,9 +1346,9 @@
   --inverse-surface-negative-minor: #4A0D13;
   --inverse-surface-info-minor: #082254;
   --inverse-surface-transparent-info: #3F81FD33;
-  --inverse-surface-accent: #24F2BFFF;
-  --inverse-surface-accent-minor: #0D5442FF;
-  --inverse-surface-transparent-accent: #24F2BF47;
+  --inverse-surface-accent: #52F2C5;
+  --inverse-surface-accent-minor: #0E5944;
+  --inverse-surface-transparent-accent: #52F2C533;
   --inverse-surface-transparent-card: #EDFFFD0D;
   --background-primary: #EFF0F2FF;
   --dark-background-primary: #242326FF;
