feat(sdds-themes): update finai background token

--- a/packages/themes/sdds-themes/src/css/sdds_finai__dark.css
+++ b/packages/themes/sdds-themes/src/css/sdds_finai__dark.css
@@ -500,8 +500,8 @@
   --background-primary: #060A0C;
   --background-primary-brightness: #15191BFF;
   --dark-background-primary: #060A0C;
-  --light-background-primary: #F7F9FB;
-  --inverse-background-primary: #F7F9FB;
+  --light-background-primary: #F2F5F8;
+  --inverse-background-primary: #F2F5F8;
   --inverse-background-primary-brightness: #F7F9FBFF;
   --overlay-hard: #060A0CF5;
   --overlay-soft: #060A0C8F;
