--- a/packages/themes/sdds-themes/src/css/sdds_finai.module.css
+++ b/packages/themes/sdds-themes/src/css/sdds_finai.module.css
@@ -500,8 +500,8 @@
   --background-primary: #060A0C;
   --background-primary-brightness: #15191BFF;
   --dark-background-primary: #060A0C;
-  --light-background-primary: #F7F9FB;
-  --inverse-background-primary: #F7F9FB;
+  --light-background-primary: #F2F5F8;
+  --inverse-background-primary: #F2F5F8;
   --inverse-background-primary-brightness: #F7F9FBFF;
   --overlay-hard: #060A0CF5;
   --overlay-soft: #060A0C8F;
@@ -1331,10 +1331,10 @@
   --inverse-surface-transparent-secondary: #D5DFE624;
   --inverse-surface-transparent-tertiary: #D5DFE63D;
   --inverse-surface-transparent-deep: #D5DFE6BD;
-  --background-primary: #F7F9FB;
+  --background-primary: #F2F5F8;
   --background-primary-brightness: #F7F9FBFF;
   --dark-background-primary: #060A0C;
-  --light-background-primary: #F7F9FB;
+  --light-background-primary: #F2F5F8;
   --inverse-background-primary-brightness: #171717FF;
   --inverse-background-primary: #060A0C;
   --overlay-hard: #F7F9FBF5;
