--- a/packages/themes/sdds-themes/src/css/sdds_cs.module.css
+++ b/packages/themes/sdds-themes/src/css/sdds_cs.module.css
@@ -151,12 +151,12 @@
   --surface-warning-minor: #3D1D0A;
   --surface-warning-minor-hover: #4F250DFF;
   --surface-warning-minor-active: #351909FF;
+  --surface-negative-minor: #4A0D13;
+  --surface-negative-minor-hover: #5B1018FF;
+  --surface-negative-minor-active: #410B11FF;
   --surface-info-minor: #0C283B;
   --surface-info-minor-hover: #10344CFF;
   --surface-info-minor-active: #0A2333FF;
-  --surface-transparent-negative: #FF293E47;
-  --surface-transparent-negative-hover: #FF293E66;
-  --surface-transparent-negative-active: #FF293E38;
   --on-dark-surface-solid-primary: #13181B;
   --on-dark-surface-solid-primary-brightness: #212629FF;
   --on-dark-surface-solid-primary-hover: #171D21FF;
@@ -201,12 +201,12 @@
   --on-dark-surface-warning-minor: #3D1D0A;
   --on-dark-surface-warning-minor-hover: #4F250DFF;
   --on-dark-surface-warning-minor-active: #351909FF;
+  --on-dark-surface-negative-minor: #4A0D13;
+  --on-dark-surface-negative-minor-hover: #5B1018FF;
+  --on-dark-surface-negative-minor-active: #410B11FF;
   --on-dark-surface-info-minor: #0C283B;
   --on-dark-surface-info-minor-hover: #10344CFF;
   --on-dark-surface-info-minor-active: #0A2333FF;
-  --on-dark-surface-transparent-negative: #FF293E47;
-  --on-dark-surface-transparent-negative-hover: #FF293E66;
-  --on-dark-surface-transparent-negative-active: #FF293E38;
   --on-light-surface-solid-primary: #F2F5F8;
   --on-light-surface-solid-primary-brightness: #F3F6F8FF;
   --on-light-surface-solid-primary-hover: #F8FAFBFF;
@@ -248,12 +248,12 @@
   --on-light-surface-warning-minor: #FFD1B8;
   --on-light-surface-warning-minor-hover: #FFDECCFF;
   --on-light-surface-warning-minor-active: #FFCAADFF;
+  --on-light-surface-negative-minor: #FECDD2;
+  --on-light-surface-negative-minor-hover: #FED7DBFF;
+  --on-light-surface-negative-minor-active: #FEC3C9FF;
   --on-light-surface-info-minor: #B0DFFF;
   --on-light-surface-info-minor-hover: #C7E9FFFF;
   --on-light-surface-info-minor-active: #A8DCFFFF;
-  --on-light-surface-transparent-negative: #FF293E47;
-  --on-light-surface-transparent-negative-hover: #FF293E66;
-  --on-light-surface-transparent-negative-active: #FF293E38;
   --inverse-surface-solid-primary: #F2F5F8;
   --inverse-surface-solid-primary-brightness: #F3F6F8FF;
   --inverse-surface-solid-primary-hover: #F8FAFBFF;
@@ -597,10 +597,10 @@
   --surface-info-active: #0F90E6FF;
   --surface-warning-minor-hover: #FFFAF0FF;
   --surface-warning-minor-active: #FFF3DBFF;
+  --surface-negative-minor-hover: #FFFFFFFF;
+  --surface-negative-minor-active: #FFEBEDFF;
   --surface-info-minor-hover: #F5FBFFFF;
   --surface-info-minor-active: #E0F3FFFF;
-  --surface-transparent-negative-hover: #FFFFFFFF;
-  --surface-transparent-negative-active: #FFEBEDFF;
   --surface-solid-primary-brightness: #FFFFFFFF;
   --surface-solid-card: #FFFFFFFF;
   --surface-solid-card-brightness: #FFFFFFFF;
@@ -614,10 +614,10 @@
   --surface-warning-minor: #FFF6E5;
   --surface-info-minor: #EDF8FF;
   --surface-info: #199AF0;
-  --surface-transparent-negative: #FFF5F6;
   --surface-solid-tertiary: #D5DFE6;
   --surface-solid-primary: #F2F5F8;
   --surface-solid-secondary: #E8EEF2;
+  --surface-negative-minor: #FFF5F6;
   --on-dark-surface-solid-primary-hover: #394147FF;
   --on-dark-surface-solid-primary-active: #272C30FF;
   --on-dark-surface-solid-secondary-hover: #5A656CFF;
@@ -646,10 +646,10 @@
   --on-dark-surface-info-active: #0F90E6FF;
   --on-dark-surface-warning-minor-hover: #32250BFF;
   --on-dark-surface-warning-minor-active: #110C04FF;
+  --on-dark-surface-negative-minor-hover: #64121AFF;
+  --on-dark-surface-negative-minor-active: #380A0FFF;
   --on-dark-surface-info-minor-hover: #0E2434FF;
   --on-dark-surface-info-minor-active: #050E14FF;
-  --on-dark-surface-transparent-negative-hover: #400D12FF;
-  --on-dark-surface-transparent-negative-active: #1E0608FF;
   --on-dark-surface-solid-primary-brightness: #3D464CFF;
   --on-dark-surface-solid-card: #13181B;
   --on-dark-surface-solid-card-brightness: #212629FF;
@@ -664,10 +664,10 @@
   --on-dark-surface-warning-minor: #211807;
   --on-dark-surface-info-minor: #0A1924;
   --on-dark-surface-info: #199AF0;
-  --on-dark-surface-transparent-negative: #2E090D;
   --on-dark-surface-solid-secondary: #485056;
   --on-dark-surface-solid-tertiary: #657179;
   --on-dark-surface-solid-primary: #30373C;
+  --on-dark-surface-negative-minor: #4A0D13;
   --on-light-surface-solid-primary-hover: #F8FAFBFF;
   --on-light-surface-solid-primary-active: #EBF0F4FF;
   --on-light-surface-solid-secondary-hover: #F5F8F9FF;
@@ -694,10 +694,10 @@
   --on-light-surface-info-active: #0F90E6FF;
   --on-light-surface-warning-minor-hover: #FFFAF0FF;
   --on-light-surface-warning-minor-active: #FFF3DBFF;
+  --on-light-surface-negative-minor-hover: #FFFFFFFF;
+  --on-light-surface-negative-minor-active: #FFEBEDFF;
   --on-light-surface-info-minor-hover: #F5FBFFFF;
   --on-light-surface-info-minor-active: #E0F3FFFF;
-  --on-light-surface-transparent-negative-hover: #FFFFFFFF;
-  --on-light-surface-transparent-negative-active: #FFEBEDFF;
   --on-light-surface-solid-primary-brightness: #FFFFFFFF;
   --on-light-surface-solid-card: #FFFFFFFF;
   --on-light-surface-solid-card-brightness: #FFFFFFFF;
@@ -711,10 +711,10 @@
   --on-light-surface-warning-minor: #FFF6E5;
   --on-light-surface-info-minor: #EDF8FF;
   --on-light-surface-info: #199AF0;
-  --on-light-surface-transparent-negative: #FFF5F6;
   --on-light-surface-solid-tertiary: #D5DFE6;
   --on-light-surface-solid-primary: #F2F5F8;
   --on-light-surface-solid-secondary: #E8EEF2;
+  --on-light-surface-negative-minor: #FFF5F6;
   --inverse-surface-solid-primary-hover: #394147FF;
   --inverse-surface-solid-primary-active: #272C30FF;
   --inverse-surface-solid-secondary-hover: #5A656CFF;
