--- a/packages/themes/plasma-themes/src/css/plasma_b2c.module.css
+++ b/packages/themes/plasma-themes/src/css/plasma_b2c.module.css
@@ -136,7 +136,9 @@
   --inverse-text-tertiary: #08080847;
   --inverse-text-paragraph: #080808CC;
   --inverse-text-primary-hover: #08080893;
+  --inverse-text-primary-hover-brightness: #4E4E4EFF;
   --inverse-text-primary-active: #080808C4;
+  --inverse-text-primary-active-brightness: #343434FF;
   --inverse-text-secondary-hover: #080808FF;
   --inverse-text-secondary-active: #080808AB;
   --inverse-text-tertiary-hover: #080808FF;
@@ -223,8 +225,11 @@
   --surface-transparent-warning: #FA5F0533;
   --surface-transparent-negative: #FF293E33;
   --surface-solid-default: #F9F9F9;
+  --surface-solid-default-brightness: #F9F9F9FF;
   --surface-solid-default-hover: #FFFFFFFF;
+  --surface-solid-default-hover-brightness: #FFFFFFFF;
   --surface-solid-default-active: #F5F5F5FF;
+  --surface-solid-default-active-brightness: #F6F6F6FF;
   --surface-info: #3F81FD;
   --surface-info-minor: #082254;
   --surface-transparent-info: #3F81FD33;
@@ -1076,7 +1081,9 @@
   --inverse-text-warning: #FA5F05;
   --inverse-text-negative: #FF293E;
   --inverse-text-primary-hover: #FFFFFF93;
+  --inverse-text-primary-hover-brightness: #FFFFFFFF;
   --inverse-text-primary-active: #FFFFFFC4;
+  --inverse-text-primary-active-brightness: #FFFFFFFF;
   --inverse-text-secondary-hover: #FFFFFFFF;
   --inverse-text-secondary-active: #FFFFFFAB;
   --inverse-text-tertiary-hover: #FFFFFFFF;
@@ -1111,6 +1118,7 @@
   --inverse-text-negative-minor: #9C1422;
   --inverse-text-info-minor: #1549AB;
   --surface-solid-default: #080808;
+  --surface-solid-default-brightness: #171717FF;
   --surface-solid-primary: #F5F5F5;
   --surface-solid-primary-brightness: #FFFFFFFF;
   --surface-solid-secondary: #ECECEC;
@@ -1162,7 +1170,9 @@
   --surface-info-minor: #DEE9FF;
   --surface-transparent-info: #2A72F81F;
   --surface-solid-default-hover: #262626FF;
+  --surface-solid-default-hover-brightness: #333333FF;
   --surface-solid-default-active: #030303FF;
+  --surface-solid-default-active-brightness: #121212FF;
   --surface-solid-primary-hover: #FAFAFAFF;
   --surface-solid-primary-active: #F0F0F0FF;
   --surface-solid-secondary-hover: #F7F7F7FF;
