feat(sdds-themes): update sdds_cs theme

--- a/packages/themes/sdds-themes/src/css/sdds_cs.module.css
+++ b/packages/themes/sdds-themes/src/css/sdds_cs.module.css
@@ -14,9 +14,8 @@
   --text-accent: #0C9C0C;
   --text-accent-hover: #0EB90EFF;
   --text-accent-active: #0A800AFF;
-  --text-accent-minor: #94FF94;
-  --text-accent-minor-hover: #B3FFB3FF;
-  --text-accent-minor-active: #75FF75FF;
+  --text-accent-minor-hover: #23E723FF;
+  --text-accent-minor-active: #14B814FF;
   --text-positive: #1A9E32;
   --text-positive-hover: #1EB83AFF;
   --text-positive-active: #15842AFF;
@@ -29,6 +28,7 @@
   --text-info: #118CDF;
   --text-info-hover: #50B1F2FF;
   --text-info-active: #0F7BC2FF;
+  --text-accent-minor: #17D317;
   --on-dark-text-primary: #FFFFFFF5;
   --on-dark-text-primary-brightness: #FFFFFFFF;
   --on-dark-text-primary-hover: #FFFFFF93;
@@ -42,9 +42,8 @@
   --on-dark-text-accent: #0C9C0C;
   --on-dark-text-accent-hover: #0EB90EFF;
   --on-dark-text-accent-active: #0A800AFF;
-  --on-dark-text-accent-minor: #94FF94;
-  --on-dark-text-accent-minor-hover: #B3FFB3FF;
-  --on-dark-text-accent-minor-active: #75FF75FF;
+  --on-dark-text-accent-minor-hover: #23E723FF;
+  --on-dark-text-accent-minor-active: #14B814FF;
   --on-dark-text-positive: #1A9E32;
   --on-dark-text-positive-hover: #1EB83AFF;
   --on-dark-text-positive-active: #15842AFF;
@@ -57,6 +56,7 @@
   --on-dark-text-info: #118CDF;
   --on-dark-text-info-hover: #50B1F2FF;
   --on-dark-text-info-active: #0F7BC2FF;
+  --on-dark-text-accent-minor: #17D317;
   --on-light-text-primary: #060A0CF5;
   --on-light-text-primary-brightness: #191BF6FF;
   --on-light-text-primary-hover: #070B0E93;
@@ -70,9 +70,8 @@
   --on-light-text-accent: #108210;
   --on-light-text-accent-hover: #17BA17FF;
   --on-light-text-accent-active: #149F14FF;
-  --on-light-text-accent-minor: #082B08;
-  --on-light-text-accent-minor-hover: #115F11FF;
-  --on-light-text-accent-minor-active: #0D450DFF;
+  --on-light-text-accent-minor-hover: #0EB90EFF;
+  --on-light-text-accent-minor-active: #0A800AFF;
   --on-light-text-positive: #108E26;
   --on-light-text-positive-hover: #13AA2CFF;
   --on-light-text-positive-active: #0D731EFF;
@@ -85,6 +84,7 @@
   --on-light-text-info: #0B7ECB;
   --on-light-text-info-hover: #34A7F4FF;
   --on-light-text-info-active: #096CAEFF;
+  --on-light-text-accent-minor: #0C9C0C;
   --inverse-text-primary: #060A0CF5;
   --inverse-text-primary-brightness: #191BF6FF;
   --inverse-text-primary-hover: #070B0E93;
@@ -98,9 +98,8 @@
   --inverse-text-accent: #108210;
   --inverse-text-accent-hover: #17BA17FF;
   --inverse-text-accent-active: #149F14FF;
-  --inverse-text-accent-minor: #082B08;
-  --inverse-text-accent-minor-hover: #115F11FF;
-  --inverse-text-accent-minor-active: #0D450DFF;
+  --inverse-text-accent-minor-hover: #0EB90EFF;
+  --inverse-text-accent-minor-active: #0A800AFF;
   --inverse-text-positive: #108E26;
   --inverse-text-positive-hover: #13AA2CFF;
   --inverse-text-positive-active: #0D731EFF;
@@ -110,6 +109,7 @@
   --inverse-text-negative: #F31B31;
   --inverse-text-negative-hover: #F5384BFF;
   --inverse-text-negative-active: #E40C22FF;
+  --inverse-text-accent-minor: #0C9C0C;
   --surface-solid-primary: #13181B;
   --surface-solid-primary-brightness: #212629FF;
   --surface-solid-primary-hover: #171D21FF;
@@ -470,8 +470,8 @@
   --text-tertiary-active: #515B61FF;
   --text-accent-hover: #19CC19FF;
   --text-accent-active: #15A815FF;
-  --text-accent-minor-hover: #2CE82CFF;
-  --text-accent-minor-active: #13AE13FF;
+  --text-accent-minor-hover: #0FC20FFF;
+  --text-accent-minor-active: #097709FF;
   --text-positive-hover: #19CC19FF;
   --text-positive-active: #15A815FF;
   --text-warning-hover: #F5B638FF;
@@ -486,10 +486,10 @@
   --text-accent: #108210;
   --text-negative: #E31227;
   --text-positive: #108210;
-  --text-accent-minor: #17D317;
   --text-tertiary: #657179;
   --text-warning: #F3A912;
   --text-info: #199AF0;
+  --text-accent-minor: #0C9C0C;
   --on-dark-text-primary-hover: #000000FF;
   --on-dark-text-primary-active: #B4C7D9FF;
   --on-dark-text-secondary-hover: #000000FF;
@@ -498,8 +498,8 @@
   --on-dark-text-tertiary-active: #596269FF;
   --on-dark-text-accent-hover: #19D719FF;
   --on-dark-text-accent-active: #118D11FF;
-  --on-dark-text-accent-minor-hover: #09AA09FF;
-  --on-dark-text-accent-minor-active: #078307FF;
+  --on-dark-text-accent-minor-hover: #2CE82CFF;
+  --on-dark-text-accent-minor-active: #13AE13FF;
   --on-dark-text-positive-hover: #19D719FF;
   --on-dark-text-positive-active: #118D11FF;
   --on-dark-text-warning-hover: #F5B638FF;
@@ -514,10 +514,10 @@
   --on-dark-text-accent: #15B015;
   --on-dark-text-negative: #FF293E;
   --on-dark-text-positive: #15B015;
-  --on-dark-text-accent-minor: #055C05;
   --on-dark-text-tertiary: #707C84;
   --on-dark-text-warning: #F3A912;
   --on-dark-text-info: #199AF0;
+  --on-dark-text-accent-minor: #17D317;
   --on-light-text-primary-hover: #6A7E8AFF;
   --on-light-text-primary-active: #47545CFF;
   --on-light-text-secondary-hover: #000000FF;
@@ -526,8 +526,8 @@
   --on-light-text-tertiary-active: #515B61FF;
   --on-light-text-accent-hover: #19CC19FF;
   --on-light-text-accent-active: #15A815FF;
-  --on-light-text-accent-minor-hover: #2CE82CFF;
-  --on-light-text-accent-minor-active: #13AE13FF;
+  --on-light-text-accent-minor-hover: #0FC20FFF;
+  --on-light-text-accent-minor-active: #097709FF;
   --on-light-text-positive-hover: #19CC19FF;
   --on-light-text-positive-active: #15A815FF;
   --on-light-text-warning-hover: #F5B638FF;
@@ -542,10 +542,10 @@
   --on-light-text-accent: #108210;
   --on-light-text-positive: #108210;
   --on-light-text-negative: #E31227;
-  --on-light-text-accent-minor: #17D317;
   --on-light-text-tertiary: #657179;
   --on-light-text-warning: #F3A912;
   --on-light-text-info: #199AF0;
+  --on-light-text-accent-minor: #0C9C0C;
   --inverse-text-primary-hover: #000000FF;
   --inverse-text-primary-active: #B4C7D9FF;
   --inverse-text-secondary-hover: #FFFFFFFF;
@@ -554,8 +554,8 @@
   --inverse-text-tertiary-active: #636D74FF;
   --inverse-text-accent-hover: #19D719FF;
   --inverse-text-accent-active: #118D11FF;
-  --inverse-text-accent-minor-hover: #09AA09FF;
-  --inverse-text-accent-minor-active: #078307FF;
+  --inverse-text-accent-minor-hover: #2CE82CFF;
+  --inverse-text-accent-minor-active: #13AE13FF;
   --inverse-text-positive-hover: #19D719FF;
   --inverse-text-positive-active: #118D11FF;
   --inverse-text-warning-hover: #F5B638FF;
@@ -567,10 +567,10 @@
   --inverse-text-accent: #15B015;
   --inverse-text-positive: #15B015;
   --inverse-text-negative: #FF293E;
-  --inverse-text-accent-minor: #055C05;
   --inverse-text-warning: #F3A912;
   --inverse-text-secondary: #C0CBD3;
   --inverse-text-tertiary: #7B868E;
+  --inverse-text-accent-minor: #17D317;
   --surface-solid-primary-hover: #F8FAFBFF;
   --surface-solid-primary-active: #EBF0F4FF;
   --surface-solid-secondary-hover: #F5F8F9FF;
