--- a/packages/themes/sdds-themes/src/css/sdds_cs__light.css
+++ b/packages/themes/sdds-themes/src/css/sdds_cs__light.css
@@ -9,8 +9,8 @@
   --text-tertiary-active: #515B61FF;
   --text-accent-hover: #19CC19FF;
   --text-accent-active: #15A815FF;
-  --text-accent-minor-hover: #2CE82CFF;
-  --text-accent-minor-active: #13AE13FF;
+  --text-accent-minor-hover: #0FC20FFF;
+  --text-accent-minor-active: #097709FF;
   --text-positive-hover: #19CC19FF;
   --text-positive-active: #15A815FF;
   --text-warning-hover: #F5B638FF;
@@ -25,10 +25,10 @@
   --text-accent: #108210;
   --text-negative: #E31227;
   --text-positive: #108210;
-  --text-accent-minor: #17D317;
   --text-tertiary: #657179;
   --text-warning: #F3A912;
   --text-info: #199AF0;
+  --text-accent-minor: #0C9C0C;
   --on-dark-text-primary-hover: #000000FF;
   --on-dark-text-primary-active: #B4C7D9FF;
   --on-dark-text-secondary-hover: #000000FF;
@@ -37,8 +37,8 @@
   --on-dark-text-tertiary-active: #596269FF;
   --on-dark-text-accent-hover: #19D719FF;
   --on-dark-text-accent-active: #118D11FF;
-  --on-dark-text-accent-minor-hover: #09AA09FF;
-  --on-dark-text-accent-minor-active: #078307FF;
+  --on-dark-text-accent-minor-hover: #2CE82CFF;
+  --on-dark-text-accent-minor-active: #13AE13FF;
   --on-dark-text-positive-hover: #19D719FF;
   --on-dark-text-positive-active: #118D11FF;
   --on-dark-text-warning-hover: #F5B638FF;
@@ -53,10 +53,10 @@
   --on-dark-text-accent: #15B015;
   --on-dark-text-negative: #FF293E;
   --on-dark-text-positive: #15B015;
-  --on-dark-text-accent-minor: #055C05;
   --on-dark-text-tertiary: #707C84;
   --on-dark-text-warning: #F3A912;
   --on-dark-text-info: #199AF0;
+  --on-dark-text-accent-minor: #17D317;
   --on-light-text-primary-hover: #6A7E8AFF;
   --on-light-text-primary-active: #47545CFF;
   --on-light-text-secondary-hover: #000000FF;
@@ -65,8 +65,8 @@
   --on-light-text-tertiary-active: #515B61FF;
   --on-light-text-accent-hover: #19CC19FF;
   --on-light-text-accent-active: #15A815FF;
-  --on-light-text-accent-minor-hover: #2CE82CFF;
-  --on-light-text-accent-minor-active: #13AE13FF;
+  --on-light-text-accent-minor-hover: #0FC20FFF;
+  --on-light-text-accent-minor-active: #097709FF;
   --on-light-text-positive-hover: #19CC19FF;
   --on-light-text-positive-active: #15A815FF;
   --on-light-text-warning-hover: #F5B638FF;
@@ -81,10 +81,10 @@
   --on-light-text-accent: #108210;
   --on-light-text-positive: #108210;
   --on-light-text-negative: #E31227;
-  --on-light-text-accent-minor: #17D317;
   --on-light-text-tertiary: #657179;
   --on-light-text-warning: #F3A912;
   --on-light-text-info: #199AF0;
+  --on-light-text-accent-minor: #0C9C0C;
   --inverse-text-primary-hover: #000000FF;
   --inverse-text-primary-active: #B4C7D9FF;
   --inverse-text-secondary-hover: #FFFFFFFF;
@@ -93,8 +93,8 @@
   --inverse-text-tertiary-active: #636D74FF;
   --inverse-text-accent-hover: #19D719FF;
   --inverse-text-accent-active: #118D11FF;
-  --inverse-text-accent-minor-hover: #09AA09FF;
-  --inverse-text-accent-minor-active: #078307FF;
+  --inverse-text-accent-minor-hover: #2CE82CFF;
+  --inverse-text-accent-minor-active: #13AE13FF;
   --inverse-text-positive-hover: #19D719FF;
   --inverse-text-positive-active: #118D11FF;
   --inverse-text-warning-hover: #F5B638FF;
@@ -106,10 +106,10 @@
   --inverse-text-accent: #15B015;
   --inverse-text-positive: #15B015;
   --inverse-text-negative: #FF293E;
-  --inverse-text-accent-minor: #055C05;
   --inverse-text-warning: #F3A912;
   --inverse-text-secondary: #C0CBD3;
   --inverse-text-tertiary: #7B868E;
+  --inverse-text-accent-minor: #17D317;
   --surface-solid-primary-hover: #F8FAFBFF;
   --surface-solid-primary-active: #EBF0F4FF;
   --surface-solid-secondary-hover: #F5F8F9FF;
